updated ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,48 @@ numerical/mendota/2_validation/GOTM/meteo_file.dat
 numerical/mendota/2_validation/Simstrat/meteo_file.dat
 numerical/mendota/2_validation/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
 numerical/mendota/2_validation/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/mendota/3_scenarios/1_null/output/ensemble_output.nc
+numerical/mendota/3_scenarios/1_null/LakeEnsemblR_meteo_standard.csv
+numerical/mendota/3_scenarios/1_null/GLM/output/output.nc
+numerical/mendota/3_scenarios/1_null/GLM/meteo_file.csv
+numerical/mendota/3_scenarios/1_null/GOTM/output/output.nc
+numerical/mendota/3_scenarios/1_null/GOTM/meteo_file.dat
+numerical/mendota/3_scenarios/1_null/Simstrat/meteo_file.dat
+numerical/mendota/3_scenarios/1_null/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/mendota/3_scenarios/1_null/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/mendota/3_scenarios/2_constantsalt/output/ensemble_output.nc
+numerical/mendota/3_scenarios/2_constantsalt/LakeEnsemblR_meteo_standard.csv
+numerical/mendota/3_scenarios/2_constantsalt/GLM/output/output.nc
+numerical/mendota/3_scenarios/2_constantsalt/GLM/meteo_file.csv
+numerical/mendota/3_scenarios/2_constantsalt/GOTM/output/output.nc
+numerical/mendota/3_scenarios/2_constantsalt/GOTM/meteo_file.dat
+numerical/mendota/3_scenarios/2_constantsalt/Simstrat/meteo_file.dat
+numerical/mendota/3_scenarios/2_constantsalt/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/mendota/3_scenarios/2_constantsalt/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/mendota/3_scenarios/3_constantsalt+2/output/ensemble_output.nc
+numerical/mendota/3_scenarios/3_constantsalt+2/LakeEnsemblR_meteo_standard.csv
+numerical/mendota/3_scenarios/3_constantsalt+2/GLM/output/output.nc
+numerical/mendota/3_scenarios/3_constantsalt+2/GLM/meteo_file.csv
+numerical/mendota/3_scenarios/3_constantsalt+2/GOTM/output/output.nc
+numerical/mendota/3_scenarios/3_constantsalt+2/GOTM/meteo_file.dat
+numerical/mendota/3_scenarios/3_constantsalt+2/Simstrat/meteo_file.dat
+numerical/mendota/3_scenarios/3_constantsalt+2/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/mendota/3_scenarios/3_constantsalt+2/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/mendota/3_scenarios/3_constantsalt+5/output/ensemble_output.nc
+numerical/mendota/3_scenarios/3_constantsalt+5/LakeEnsemblR_meteo_standard.csv
+numerical/mendota/3_scenarios/3_constantsalt+5/GLM/output/output.nc
+numerical/mendota/3_scenarios/3_constantsalt+5/GLM/meteo_file.csv
+numerical/mendota/3_scenarios/3_constantsalt+5/GOTM/output/output.nc
+numerical/mendota/3_scenarios/3_constantsalt+5/GOTM/meteo_file.dat
+numerical/mendota/3_scenarios/3_constantsalt+5/Simstrat/meteo_file.dat
+numerical/mendota/3_scenarios/3_constantsalt+5/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/mendota/3_scenarios/3_constantsalt+5/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/mendota/3_scenarios/3_constantsalt+10/output/ensemble_output.nc
+numerical/mendota/3_scenarios/3_constantsalt+10/LakeEnsemblR_meteo_standard.csv
+numerical/mendota/3_scenarios/3_constantsalt+10/GLM/output/output.nc
+numerical/mendota/3_scenarios/3_constantsalt+10/GLM/meteo_file.csv
+numerical/mendota/3_scenarios/3_constantsalt+10/GOTM/output/output.nc
+numerical/mendota/3_scenarios/3_constantsalt+10/GOTM/meteo_file.dat
+numerical/mendota/3_scenarios/3_constantsalt+10/Simstrat/meteo_file.dat
+numerical/mendota/3_scenarios/3_constantsalt+10/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/mendota/3_scenarios/3_constantsalt+10/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
