--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,39 @@ numerical/mendota/3_scenarios/5_constantsalt+10/GOTM/meteo_file.dat
 numerical/mendota/3_scenarios/5_constantsalt+10/Simstrat/meteo_file.dat
 numerical/mendota/3_scenarios/5_constantsalt+10/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
 numerical/mendota/3_scenarios/5_constantsalt+10/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/mendota/3_scenarios/6_constantsalt+05/output/ensemble_output.nc
+numerical/mendota/3_scenarios/6_constantsalt+05/LakeEnsemblR_meteo_standard.csv
+numerical/mendota/3_scenarios/6_constantsalt+05/GLM/output/output.nc
+numerical/mendota/3_scenarios/6_constantsalt+05/GLM/meteo_file.csv
+numerical/mendota/3_scenarios/6_constantsalt+05/GOTM/output/output.nc
+numerical/mendota/3_scenarios/6_constantsalt+05/GOTM/meteo_file.dat
+numerical/mendota/3_scenarios/6_constantsalt+05/Simstrat/meteo_file.dat
+numerical/mendota/3_scenarios/6_constantsalt+05/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/mendota/3_scenarios/6_constantsalt+05/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/mendota/3_scenarios/7_constantsalt+1/output/ensemble_output.nc
+numerical/mendota/3_scenarios/7_constantsalt+1/LakeEnsemblR_meteo_standard.csv
+numerical/mendota/3_scenarios/7_constantsalt+1/GLM/output/output.nc
+numerical/mendota/3_scenarios/7_constantsalt+1/GLM/meteo_file.csv
+numerical/mendota/3_scenarios/7_constantsalt+1/GOTM/output/output.nc
+numerical/mendota/3_scenarios/7_constantsalt+1/GOTM/meteo_file.dat
+numerical/mendota/3_scenarios/7_constantsalt+1/Simstrat/meteo_file.dat
+numerical/mendota/3_scenarios/7_constantsalt+1/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/mendota/3_scenarios/7_constantsalt+1/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/mendota/3_scenarios/8_constantsalt+15/output/ensemble_output.nc
+numerical/mendota/3_scenarios/8_constantsalt+15/LakeEnsemblR_meteo_standard.csv
+numerical/mendota/3_scenarios/8_constantsalt+15/GLM/output/output.nc
+numerical/mendota/3_scenarios/8_constantsalt+15/GLM/meteo_file.csv
+numerical/mendota/3_scenarios/8_constantsalt+15/GOTM/output/output.nc
+numerical/mendota/3_scenarios/8_constantsalt+15/GOTM/meteo_file.dat
+numerical/mendota/3_scenarios/8_constantsalt+15/Simstrat/meteo_file.dat
+numerical/mendota/3_scenarios/8_constantsalt+15/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/mendota/3_scenarios/8_constantsalt+15/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/1_calibration/output/ensemble_output.nc
+numerical/monona/1_calibration/LakeEnsemblR_meteo_standard.csv
+numerical/monona/1_calibration/GLM/output/output.nc
+numerical/monona/1_calibration/GLM/meteo_file.csv
+numerical/monona/1_calibration/GOTM/output/output.nc
+numerical/monona/1_calibration/GOTM/meteo_file.dat
+numerical/monona/1_calibration/Simstrat/meteo_file.dat
+numerical/monona/1_calibration/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/1_calibration/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
