--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,51 @@ numerical/mendota/3_scenarios/8_constantsalt+15/GOTM/meteo_file.dat
 numerical/mendota/3_scenarios/8_constantsalt+15/Simstrat/meteo_file.dat
 numerical/mendota/3_scenarios/8_constantsalt+15/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
 numerical/mendota/3_scenarios/8_constantsalt+15/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/mendota/3_scenarios/9_constantsalt+25/output/ensemble_output.nc
+numerical/mendota/3_scenarios/9_constantsalt+25/LakeEnsemblR_meteo_standard.csv
+numerical/mendota/3_scenarios/9_constantsalt+25/GLM/output/output.nc
+numerical/mendota/3_scenarios/9_constantsalt+25/GLM/meteo_file.csv
+numerical/mendota/3_scenarios/9_constantsalt+25/GOTM/output/output.nc
+numerical/mendota/3_scenarios/9_constantsalt+25/GOTM/meteo_file.dat
+numerical/mendota/3_scenarios/9_constantsalt+25/Simstrat/meteo_file.dat
+numerical/mendota/3_scenarios/9_constantsalt+25/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/mendota/3_scenarios/9_constantsalt+25/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/mendota/3_scenarios/10_constantsalt+3/output/ensemble_output.nc
+numerical/mendota/3_scenarios/10_constantsalt+3/LakeEnsemblR_meteo_standard.csv
+numerical/mendota/3_scenarios/10_constantsalt+3/GLM/output/output.nc
+numerical/mendota/3_scenarios/10_constantsalt+3/GLM/meteo_file.csv
+numerical/mendota/3_scenarios/10_constantsalt+3/GOTM/output/output.nc
+numerical/mendota/3_scenarios/10_constantsalt+3/GOTM/meteo_file.dat
+numerical/mendota/3_scenarios/10_constantsalt+3/Simstrat/meteo_file.dat
+numerical/mendota/3_scenarios/10_constantsalt+3/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/mendota/3_scenarios/10_constantsalt+3/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/mendota/3_scenarios/11_constantsalt+35/output/ensemble_output.nc
+numerical/mendota/3_scenarios/11_constantsalt+35/LakeEnsemblR_meteo_standard.csv
+numerical/mendota/3_scenarios/11_constantsalt+35/GLM/output/output.nc
+numerical/mendota/3_scenarios/11_constantsalt+35/GLM/meteo_file.csv
+numerical/mendota/3_scenarios/11_constantsalt+35/GOTM/output/output.nc
+numerical/mendota/3_scenarios/11_constantsalt+35/GOTM/meteo_file.dat
+numerical/mendota/3_scenarios/11_constantsalt+35/Simstrat/meteo_file.dat
+numerical/mendota/3_scenarios/11_constantsalt+35/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/mendota/3_scenarios/11_constantsalt+35/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/mendota/3_scenarios/12_constantsalt+4/output/ensemble_output.nc
+numerical/mendota/3_scenarios/12_constantsalt+4/LakeEnsemblR_meteo_standard.csv
+numerical/mendota/3_scenarios/12_constantsalt+4/GLM/output/output.nc
+numerical/mendota/3_scenarios/12_constantsalt+4/GLM/meteo_file.csv
+numerical/mendota/3_scenarios/12_constantsalt+4/GOTM/output/output.nc
+numerical/mendota/3_scenarios/12_constantsalt+4/GOTM/meteo_file.dat
+numerical/mendota/3_scenarios/12_constantsalt+4/Simstrat/meteo_file.dat
+numerical/mendota/3_scenarios/12_constantsalt+4/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/mendota/3_scenarios/12_constantsalt+4/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/mendota/3_scenarios/13_constantsalt+45/output/ensemble_output.nc
+numerical/mendota/3_scenarios/13_constantsalt+45/LakeEnsemblR_meteo_standard.csv
+numerical/mendota/3_scenarios/13_constantsalt+45/GLM/output/output.nc
+numerical/mendota/3_scenarios/13_constantsalt+45/GLM/meteo_file.csv
+numerical/mendota/3_scenarios/13_constantsalt+45/GOTM/output/output.nc
+numerical/mendota/3_scenarios/13_constantsalt+45/GOTM/meteo_file.dat
+numerical/mendota/3_scenarios/13_constantsalt+45/Simstrat/meteo_file.dat
+numerical/mendota/3_scenarios/13_constantsalt+45/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/mendota/3_scenarios/13_constantsalt+45/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
 numerical/monona/1_calibration/output/ensemble_output.nc
 numerical/monona/1_calibration/LakeEnsemblR_meteo_standard.csv
 numerical/monona/1_calibration/GLM/output/output.nc
@@ -98,3 +143,129 @@ numerical/monona/1_calibration/GOTM/meteo_file.dat
 numerical/monona/1_calibration/Simstrat/meteo_file.dat
 numerical/monona/1_calibration/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
 numerical/monona/1_calibration/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/2_validation/output/ensemble_output.nc
+numerical/monona/2_validation/LakeEnsemblR_meteo_standard.csv
+numerical/monona/2_validation/GLM/output/output.nc
+numerical/monona/2_validation/GLM/meteo_file.csv
+numerical/monona/2_validation/GOTM/output/output.nc
+numerical/monona/2_validation/GOTM/meteo_file.dat
+numerical/monona/2_validation/Simstrat/meteo_file.dat
+numerical/monona/2_validation/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/2_validation/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/3_scenarios/1_null/output/ensemble_output.nc
+numerical/monona/3_scenarios/1_null/LakeEnsemblR_meteo_standard.csv
+numerical/monona/3_scenarios/1_null/GLM/output/output.nc
+numerical/monona/3_scenarios/1_null/GLM/meteo_file.csv
+numerical/monona/3_scenarios/1_null/GOTM/output/output.nc
+numerical/monona/3_scenarios/1_null/GOTM/meteo_file.dat
+numerical/monona/3_scenarios/1_null/Simstrat/meteo_file.dat
+numerical/monona/3_scenarios/1_null/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/3_scenarios/1_null/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/3_scenarios/2_constantsalt/output/ensemble_output.nc
+numerical/monona/3_scenarios/2_constantsalt/LakeEnsemblR_meteo_standard.csv
+numerical/monona/3_scenarios/2_constantsalt/GLM/output/output.nc
+numerical/monona/3_scenarios/2_constantsalt/GLM/meteo_file.csv
+numerical/monona/3_scenarios/2_constantsalt/GOTM/output/output.nc
+numerical/monona/3_scenarios/2_constantsalt/GOTM/meteo_file.dat
+numerical/monona/3_scenarios/2_constantsalt/Simstrat/meteo_file.dat
+numerical/monona/3_scenarios/2_constantsalt/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/3_scenarios/2_constantsalt/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/3_scenarios/3_constantsalt+2/output/ensemble_output.nc
+numerical/monona/3_scenarios/3_constantsalt+2/LakeEnsemblR_meteo_standard.csv
+numerical/monona/3_scenarios/3_constantsalt+2/GLM/output/output.nc
+numerical/monona/3_scenarios/3_constantsalt+2/GLM/meteo_file.csv
+numerical/monona/3_scenarios/3_constantsalt+2/GOTM/output/output.nc
+numerical/monona/3_scenarios/3_constantsalt+2/GOTM/meteo_file.dat
+numerical/monona/3_scenarios/3_constantsalt+2/Simstrat/meteo_file.dat
+numerical/monona/3_scenarios/3_constantsalt+2/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/3_scenarios/3_constantsalt+2/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/3_scenarios/4_constantsalt+5/output/ensemble_output.nc
+numerical/monona/3_scenarios/4_constantsalt+5/LakeEnsemblR_meteo_standard.csv
+numerical/monona/3_scenarios/4_constantsalt+5/GLM/output/output.nc
+numerical/monona/3_scenarios/4_constantsalt+5/GLM/meteo_file.csv
+numerical/monona/3_scenarios/4_constantsalt+5/GOTM/output/output.nc
+numerical/monona/3_scenarios/4_constantsalt+5/GOTM/meteo_file.dat
+numerical/monona/3_scenarios/4_constantsalt+5/Simstrat/meteo_file.dat
+numerical/monona/3_scenarios/4_constantsalt+5/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/3_scenarios/4_constantsalt+5/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/3_scenarios/5_constantsalt+10/output/ensemble_output.nc
+numerical/monona/3_scenarios/5_constantsalt+10/LakeEnsemblR_meteo_standard.csv
+numerical/monona/3_scenarios/5_constantsalt+10/GLM/output/output.nc
+numerical/monona/3_scenarios/5_constantsalt+10/GLM/meteo_file.csv
+numerical/monona/3_scenarios/5_constantsalt+10/GOTM/output/output.nc
+numerical/monona/3_scenarios/5_constantsalt+10/GOTM/meteo_file.dat
+numerical/monona/3_scenarios/5_constantsalt+10/Simstrat/meteo_file.dat
+numerical/monona/3_scenarios/5_constantsalt+10/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/3_scenarios/5_constantsalt+10/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/3_scenarios/6_constantsalt+05/output/ensemble_output.nc
+numerical/monona/3_scenarios/6_constantsalt+05/LakeEnsemblR_meteo_standard.csv
+numerical/monona/3_scenarios/6_constantsalt+05/GLM/output/output.nc
+numerical/monona/3_scenarios/6_constantsalt+05/GLM/meteo_file.csv
+numerical/monona/3_scenarios/6_constantsalt+05/GOTM/output/output.nc
+numerical/monona/3_scenarios/6_constantsalt+05/GOTM/meteo_file.dat
+numerical/monona/3_scenarios/6_constantsalt+05/Simstrat/meteo_file.dat
+numerical/monona/3_scenarios/6_constantsalt+05/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/3_scenarios/6_constantsalt+05/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/3_scenarios/7_constantsalt+1/output/ensemble_output.nc
+numerical/monona/3_scenarios/7_constantsalt+1/LakeEnsemblR_meteo_standard.csv
+numerical/monona/3_scenarios/7_constantsalt+1/GLM/output/output.nc
+numerical/monona/3_scenarios/7_constantsalt+1/GLM/meteo_file.csv
+numerical/monona/3_scenarios/7_constantsalt+1/GOTM/output/output.nc
+numerical/monona/3_scenarios/7_constantsalt+1/GOTM/meteo_file.dat
+numerical/monona/3_scenarios/7_constantsalt+1/Simstrat/meteo_file.dat
+numerical/monona/3_scenarios/7_constantsalt+1/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/3_scenarios/7_constantsalt+1/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/3_scenarios/8_constantsalt+15/output/ensemble_output.nc
+numerical/monona/3_scenarios/8_constantsalt+15/LakeEnsemblR_meteo_standard.csv
+numerical/monona/3_scenarios/8_constantsalt+15/GLM/output/output.nc
+numerical/monona/3_scenarios/8_constantsalt+15/GLM/meteo_file.csv
+numerical/monona/3_scenarios/8_constantsalt+15/GOTM/output/output.nc
+numerical/monona/3_scenarios/8_constantsalt+15/GOTM/meteo_file.dat
+numerical/monona/3_scenarios/8_constantsalt+15/Simstrat/meteo_file.dat
+numerical/monona/3_scenarios/8_constantsalt+15/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/3_scenarios/8_constantsalt+15/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/3_scenarios/9_constantsalt+25/output/ensemble_output.nc
+numerical/monona/3_scenarios/9_constantsalt+25/LakeEnsemblR_meteo_standard.csv
+numerical/monona/3_scenarios/9_constantsalt+25/GLM/output/output.nc
+numerical/monona/3_scenarios/9_constantsalt+25/GLM/meteo_file.csv
+numerical/monona/3_scenarios/9_constantsalt+25/GOTM/output/output.nc
+numerical/monona/3_scenarios/9_constantsalt+25/GOTM/meteo_file.dat
+numerical/monona/3_scenarios/9_constantsalt+25/Simstrat/meteo_file.dat
+numerical/monona/3_scenarios/9_constantsalt+25/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/3_scenarios/9_constantsalt+25/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/3_scenarios/10_constantsalt+3/output/ensemble_output.nc
+numerical/monona/3_scenarios/10_constantsalt+3/LakeEnsemblR_meteo_standard.csv
+numerical/monona/3_scenarios/10_constantsalt+3/GLM/output/output.nc
+numerical/monona/3_scenarios/10_constantsalt+3/GLM/meteo_file.csv
+numerical/monona/3_scenarios/10_constantsalt+3/GOTM/output/output.nc
+numerical/monona/3_scenarios/10_constantsalt+3/GOTM/meteo_file.dat
+numerical/monona/3_scenarios/10_constantsalt+3/Simstrat/meteo_file.dat
+numerical/monona/3_scenarios/10_constantsalt+3/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/3_scenarios/10_constantsalt+3/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/3_scenarios/11_constantsalt+35/output/ensemble_output.nc
+numerical/monona/3_scenarios/11_constantsalt+35/LakeEnsemblR_meteo_standard.csv
+numerical/monona/3_scenarios/11_constantsalt+35/GLM/output/output.nc
+numerical/monona/3_scenarios/11_constantsalt+35/GLM/meteo_file.csv
+numerical/monona/3_scenarios/11_constantsalt+35/GOTM/output/output.nc
+numerical/monona/3_scenarios/11_constantsalt+35/GOTM/meteo_file.dat
+numerical/monona/3_scenarios/11_constantsalt+35/Simstrat/meteo_file.dat
+numerical/monona/3_scenarios/11_constantsalt+35/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/3_scenarios/11_constantsalt+35/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/3_scenarios/12_constantsalt+4/output/ensemble_output.nc
+numerical/monona/3_scenarios/12_constantsalt+4/LakeEnsemblR_meteo_standard.csv
+numerical/monona/3_scenarios/12_constantsalt+4/GLM/output/output.nc
+numerical/monona/3_scenarios/12_constantsalt+4/GLM/meteo_file.csv
+numerical/monona/3_scenarios/12_constantsalt+4/GOTM/output/output.nc
+numerical/monona/3_scenarios/12_constantsalt+4/GOTM/meteo_file.dat
+numerical/monona/3_scenarios/12_constantsalt+4/Simstrat/meteo_file.dat
+numerical/monona/3_scenarios/12_constantsalt+4/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/3_scenarios/12_constantsalt+4/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
+numerical/monona/3_scenarios/13_constantsalt+45/output/ensemble_output.nc
+numerical/monona/3_scenarios/13_constantsalt+45/LakeEnsemblR_meteo_standard.csv
+numerical/monona/3_scenarios/13_constantsalt+45/GLM/output/output.nc
+numerical/monona/3_scenarios/13_constantsalt+45/GLM/meteo_file.csv
+numerical/monona/3_scenarios/13_constantsalt+45/GOTM/output/output.nc
+numerical/monona/3_scenarios/13_constantsalt+45/GOTM/meteo_file.dat
+numerical/monona/3_scenarios/13_constantsalt+45/Simstrat/meteo_file.dat
+numerical/monona/3_scenarios/13_constantsalt+45/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr_LER.csv
+numerical/monona/3_scenarios/13_constantsalt+45/Field/NLDAS2_Mendota_1979_2016_cell_5_GLMReady_cut_timezonecorr.csv
